get meetings theo người dùng